pod-volume.yml
apiVersion: v1
kind: Pod
metadata: 
     name: pod
     labels:
        app: pod  
spec:
    containers:
        - name: con1
          image: centos/httpd
          volumeMounts: 
             - name: myvol
               mountPath: /var/www/html
    volumes:
         - name: myvol
           hostPath:
               path: /httpd
               type: DirectoryOrCreate
