service.yml
apiVersion: v1
kind: Service
metadata:
   name: pod-svc
spec:
   selector:
      app: pod
   type: NodePort
   ports:
       - targetPort: 80
         port: 80
         nodePort: 31080
